# bacon_ui_lvgl

./: .gitmodules  CMakeLists.txt  README.md  bacon.c  bacon.h  bacon_theme.c  bacon_theme.h  btlib.c  btlib.h  demo_app.c  demo_app.h  devices.txt  lv_conf.h  lv_drv_conf.h  main.c  simulator.code-workspace
apps/: CMakeLists.txt  README.apps  bacon_pub.h  bacon_theme.h  clock.c  clock.manifest.json  test.c  test.manifest.json  test_app.c
